--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
+    "react-router-hash-link": "^2.4.3",
     "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^9.2.4",
     "typewriter-effect": "^2.19.0"
