--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^6.10.0",
     "react-router-hash-link": "^2.4.3",
     "react-vertical-timeline-component": "^3.6.0",
